# skywatcher-pr

./: .env.example  .gitignore  .semgrepignore  Makefile  PRII-SKYWATCHER.sh  README.md  aasb_airspace_bridge.py  aircraft_intelligence.py  federation.json  fr24_allowed_enums.py  fr24_config_defaults.py  fr24_parameter_contracts.py  fr24_screenshot_model.py  fr24_screenshot_privacy.py  fr24_screenshot_provenance.py  gis_intelligence.py  ilap_airspace_bridge.py  prii_readiness_engine.py  pyproject.toml  requirements-dev.txt  requirements-fr24.txt  requirements-geo.txt  requirements-imagery.txt  requirements.txt  run_all.py  satim_artifact_filter.py  satim_calibration.py  satim_contradiction_resolver.py  satim_cut_fill.py  satim_ensemble_calibrator.py  satim_fit.py  satim_geometry.py  satim_ground_truth.py  satim_linear_corridor.py  satim_patchwork.py  satim_render_diff.py  satim_road_end.py  satim_temporal_change.py  satim_tile_seam_classifier.py  satim_visual_route_gap.py  (+1 more)
gebco/: io.py  (+2 more)
tools/satim_engine/: CHANGELOG.md  README.md  pyproject.toml
tools/satim_engine/config/: satim_default.yml
tools/satim_engine/docs/: BATCH_REPRODUCIBILITY_GUARDRAILS.md  PRODUCTION_HARDENING_NOTES.md  QUERY_PLAYBOOK.md  STABLE_ID_POLICY.md  V26_BRANCH_OK.md  V26_CHECK.md  V26_CLOSEOUT.md  V26_COMPLETE.md  V26_CONTINUE.md  V26_DONE.md  V26_DONE_FINAL.md  V26_EXECUTE_PR.md  V26_EXECUTION_NOTE.md  V26_EXECUTION_STATUS.md  V26_FINAL_NOTE.md  V26_FINAL_PR_STATUS.md  V26_FINAL_READY.md  V26_FINAL_STATUS.md  V26_GO.md  V26_GRAPH_ID_TESTS.md  V26_GRAPH_RULE.md  V26_LIMITS.md  V26_MERGE_NOTE.md  V26_MINIMAL_PATCH.md  V26_NEXT.md  V26_NOTE.md  V26_NOW.md  V26_NO_SCOPE_CHANGE.md  V26_OPEN.md  V26_OPEN_FINAL.md  V26_OPEN_OK.md  V26_PATCH_DONE.md  V26_PATCH_READY.md  V26_PATCH_SCOPE.md  V26_PR_READY.md  V26_PR_STATUS.md  V26_PULL_REQUEST_READY.md  V26_READY.md  V26_READY_FINAL.md  (+8 more)
tools/satim_route_findings/: pyproject.toml
(+1153 files in other folders)
