[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "flight-analyzer"
version = "0.1.0"
description = "Classify flight purpose from FlightRadar24 screenshots using OCR + GPT-4o Vision"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.1",
    "openai>=1.14.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[project.scripts]
flight-analyzer = "flight_analyzer.analyze:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flight_analyzer*"]
