[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "satim-route-findings"
version = "0.1.0"
description = "Read-only SATIM route findings report generator"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
satim-route-findings = "satim_route_findings.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
